--- a/samples/Cookie2Sample/project.json
+++ b/samples/Cookie2Sample/project.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "Microsoft.AspNetCore.Authentication.Cookies": "1.2.0-*",
+    "Microsoft.AspNetCore.Authentication2.Cookies": "1.2.0-*",
     "Microsoft.AspNetCore.DataProtection": "1.2.0-*",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.2.0-*",
     "Microsoft.AspNetCore.Server.Kestrel": "1.2.0-*",
